# mailkwds

./: .gitignore  .hgignore  INSTALL  LICENSE  README  Setup.hs  Utils.hs  XLabel.hs  mailkwds.cabal  x-label.1.md  x-label.cabal
src/: Args.hs  ByteString.hs  MailKwds.hs  Main.hs  Utils.hs  XLabel.hs
src/XLabel/: Args.hs  ByteString.hs  Core.hs  Lst.hs  Str.hs  Utils.hs
src/XLabel/Lst/: DList.hs  FMList.hs  List.hs
src/XLabel/Str/: ByteString.hs  String.hs  Text.hs
test/: Test.hs
