name:               mailkwds
version:            0.1
category:           Email, Text
synopsis:           Edit email keywords/labels/tags stored in a message header field.
description:
    @mailkwds@ allows to modify keywords, labels or tags from specifiable header fields like @Keywords@, @X-Keywords@ or @X-Label@.
    .
    It can add to, clear, remove from, set and tidy up the set of keywords of the message.
    .
    @mailkwds@ is intended to be run as a message filter from a mail delivery agent such as @procmail@ or @maildrop@.
homepage:           http://github.com/seschwar/mailkwds
copyright:          Copyright (c) 2009-2010, Sebastian Schwarz <seschwar@googlemail.com>
license:            MIT
license-file:       LICENSE
author:             Sebastian Schwarz <seschwar@googlemail.com>
maintainer:         Sebastian Schwarz <seschwar@googlemail.com>
bug-reports:        http://github.com/seschwar/mailkwds/issues
build-type:         Simple
cabal-version:      >= 1.2
extra-source-files: INSTALL, README
--data-files:         mailkwds.1

Source-repository head
    type:     git
    location: git://github.com/seschwar/mailkwds.git

Flag test
    default:     False
    description: Build the test executable.

Executable test
    if flag(test)
        build-depends: QuickCheck >= 2.1 && < 2.2,
                       test-framework >= 0.2 && < 0.3,
                       test-framework-quickcheck2 >= 0.2 && < 0.3
        buildable:     True
    else
        buildable:     False
    hs-source-dirs: src, test
    main-is:        Test.hs
    other-modules:  Args,
                    ByteString,
                    Utils,
                    MailKwds
    ghc-options:    -O2 -Wall -hide-all-packages
    extensions:     OverloadedStrings

Executable mailkwds
    build-depends:  base >= 4.0 && < 4.3,
                    bytestring >= 0.9 && < 0.10,
                    containers >= 0.3 && < 0.4,
                    mtl >= 1.1 && < 1.2,
                    parsec >= 3.1 && < 3.2
    hs-source-dirs: src
    main-is:        Main.hs
    other-modules:  Args,
                    ByteString,
                    Utils,
                    MailKwds
    ghc-options:    -O2 -Wall -hide-all-packages
    extensions:     OverloadedStrings

