Name:               x-label
Version:            0.0
Category:           Text
Synopsis:           An X-Label email header editor.
Description:
    x-label allows not only to add but also operate on a existing
    X-Label email header.  For example it is possible to add or remove
    certain labels to or from the header.
Homepage:           http://bitbucket.org/seschwar/x-label/
Bug-reports:        http://bitbucket.org/seschwar/x-label/issues/
License:            OtherLicense
Author:             Sebastian Schwarz <seschwar@googlemail.com>
Maintainer:         Sebastian Schwarz <seschwar@googlemail.com>
cabal-version:      >= 1.2
build-type:         Simple
--data-files:         x-label.1
extra-source-files: INSTALL, README
license-file:       LICENSE

source-repository head
    type:     mercurial
    location: http://bitbucket.org/seschwar/x-label/

flag test
    default:     False
    description: Build the test executable.

executable test
    if flag(test)
        build-depends: QuickCheck >= 2 && < 3, test-framework < 1,
                       test-framework-quickcheck2 < 1
        buildable:     True
    else
        buildable:     False
    hs-source-dirs: src, test
    main-is:        Test.hs
    other-modules:  XLabel.Core,
                    XLabel.Utils
    ghc-options:    -O2 -Wall -hide-all-packages

executable x-label
    build-depends:  base >= 4.2 && < 4.3,
                    bytestring >= 0.9 && < 0.10,
                    containers >= 0.3 && < 0.4,
                    mtl >= 1.1 && < 1.2,
                    parsimony >= 1 && < 1.1
    hs-source-dirs: src
    main-is:        XLabel.hs
    other-modules:  XLabel.Args,
                    XLabel.ByteString,
                    XLabel.Core,
                    XLabel.Utils
    ghc-options:    -O2 -Wall -hide-all-packages
    extensions:     OverloadedStrings

