name:               x-label
version:            0.0
category:           Email, Text
synopsis:           An X-Label email header editor.
description:
    x-label allows not only to add but also operate on a existing
    X-Label email header.  For example it is possible to add or remove
    certain labels to or from the header.
homepage:           http://bitbucket.org/seschwar/x-label/
copyright:          Copyright (c) 2009-2010, Sebastian Schwarz <seschwar@googlemail.com>
license:            MIT
license-file:       LICENSE
author:             Sebastian Schwarz <seschwar@googlemail.com>
maintainer:         Sebastian Schwarz <seschwar@googlemail.com>
bug-reports:        http://bitbucket.org/seschwar/x-label/issues/
build-type:         Simple
cabal-version:      >= 1.2
extra-source-files: INSTALL, README
--data-files:         x-label.1

Source-repository head
    type:     mercurial
    location: http://bitbucket.org/seschwar/x-label/

Flag test
    default:     False
    description: Build the test executable.

Executable test
    if flag(test)
        build-depends: QuickCheck >= 2.1 && < 2.2,
                       test-framework >= 0.2 && < 0.3,
                       test-framework-quickcheck2 >= 0.2 && < 0.3
        buildable:     True
    else
        buildable:     False
    hs-source-dirs: src, test
    main-is:        Test.hs
    other-modules:  Args,
                    ByteString,
                    Utils,
                    XLabel
    ghc-options:    -O2 -Wall -hide-all-packages
    extensions:     OverloadedStrings

Executable x-label
    build-depends:  base >= 4.2 && < 4.3,
                    bytestring >= 0.9 && < 0.10,
                    containers >= 0.3 && < 0.4,
                    mtl >= 1.1 && < 1.2,
                    parsec >= 3.1 && < 3.2
    hs-source-dirs: src
    main-is:        Main.hs
    other-modules:  Args,
                    ByteString,
                    Utils,
                    XLabel
    ghc-options:    -O2 -Wall -hide-all-packages
    extensions:     OverloadedStrings

